--- a/예비소스/index.html
+++ b/예비소스/index.html
@@ -10,47 +10,7 @@
     <!-- 1. 상단영역 -->
     <div>
         <header class="top ibx">
-            <div class="logo">
-                <ul>
-                    <li>
-                        <a href="#">
-                            <img src="./images/logitechg-bottom.svg" alt="">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="./images/blue-overlay.svg" alt="">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="./images/streamlabs-overlay.svg" alt="">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="./images/ue-overlay.svg" alt="">
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <nav class="gnb">
-                <ul>
-                    <li>
-                        <a href="#">제품</a>
-                    </li>
-                    <li>
-                        <a href="#">솔루션</a>
-                    </li>
-                    <li>
-                        <a href="#">비지니스</a>
-                    </li>
-                    <li>
-                        <a href="#">지원</a>
-                    </li>
-                </ul>
-            </nav>
-            <!-- <h2>상단영역</h2> -->
+            <h2>상단영역</h2>
         </header>
     </div>
     <!-- 2. 메인영역 -->
