--- a/0000포트폴리오/index.html
+++ b/0000포트폴리오/index.html
@@ -111,21 +111,21 @@
                     <span>추가 정보</span>
                 </div>
                 <div class="goods">
-                    <img src="./images/plp-tile-mice-g305.png" alt="">
-                    <h3>LIGHTSPEED 무선</h3>
-                    <p>무선의 혁명이란 바로 이것입니다. 앤드투엔드 혁명 덕택에, 이제 선 없이도 1ms 보고율 및 지연 없이 견고한 연결성을 경험할 수 있습니다.</p>
+                    <img src="./images/plp-tile-ghub.png" alt="">
+                    <h3>하나의 앱으로. 모든 기어 제어</h3>
+                    <p>로지텍 G HUB는 지원하는 모든 로지텍 G 기어(마우스, 키보드, 헤드셋, 스피커 및 웹캠)를 최적화하고 커스터마이징할 수 있는 단일 포털을 제공합니다.</p>
                     <span>추가 정보</span>
                 </div>
                 <div class="goods">
-                    <img src="./images/plp-tile-mice-g305.png" alt="">
-                    <h3>LIGHTSPEED 무선</h3>
-                    <p>무선의 혁명이란 바로 이것입니다. 앤드투엔드 혁명 덕택에, 이제 선 없이도 1ms 보고율 및 지연 없이 견고한 연결성을 경험할 수 있습니다.</p>
+                    <img src="./images/bestseller.jpg" alt="">
+                    <h3>베스트셀러</h3>
+                    <p>많은 선수들이 사랑하는 고성능 게이밍 장비로 멈추지 않는 플레이를 즐겨보세요.</p>
                     <span>추가 정보</span>
                 </div>
                 <div class="goods">
-                    <img src="./images/plp-tile-mice-g305.png" alt="">
-                    <h3>LIGHTSPEED 무선</h3>
-                    <p>무선의 혁명이란 바로 이것입니다. 앤드투엔드 혁명 덕택에, 이제 선 없이도 1ms 보고율 및 지연 없이 견고한 연결성을 경험할 수 있습니다.</p>
+                    <img src="./images/plp-tile-keyboards-prox.png" alt="">
+                    <h3>L게이밍 키보드</h3>
+                    <p>속도. 정밀도. 내구성. 로지텍 G 게이밍 키보드는 높은 성능의 게이밍에 필요한 기술과 소재로 설계되었습니다.</p>
                     <span>추가 정보</span>
                 </div>
             </div>
