--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <h2>개인프로젝트</h2>
                 <ul>
                     <li>
-                        <a href="001.HTML 학습/01.Info_PJ/info.html" target="_blank">
+                        <a href="0000포트폴리오/index.html" target="_blank">
                             기본전달사항
                     </li>
                     <li>
