--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                                 뮤즈
                         </li>
                         <li>
-                            <a href="9997adidas/index.html" target="_blank">
+                            <a href="9997adidas/intro.html" target="_blank">
                                 아디다스
                             </a>
                         </li>
